Surface scale settings

--- a/src/index.html
+++ b/src/index.html
@@ -59,6 +59,21 @@ h1{font-size:2.5rem;margin-bottom:0.5rem;text-align:center;text-shadow:2px 2px 4
 <div class="metric-value" id="progress">--</div>
 <div class="metric-label">percent</div>
 </div>
+<div class="metric">
+<div class="metric-label">Calibration offset</div>
+<div class="metric-value" id="scale-offset">--</div>
+<div class="metric-label">raw grams</div>
+</div>
+<div class="metric">
+<div class="metric-label">Calibration factor</div>
+<div class="metric-value" id="scale-factor">--</div>
+<div class="metric-label">grams / raw_grams</div>
+</div>
+<div class="metric">
+<div class="metric-label">Calibration variance</div>
+<div class="metric-value" id="scale-std">--</div>
+<div class="metric-label">grams</div>
+</div>
 </div>
 </div>
 
