--- a/src/index.html
+++ b/src/index.html
@@ -70,7 +70,7 @@ h1{font-size:2.5rem;margin-bottom:0.5rem;text-align:center;text-shadow:2px 2px 4
 <div class="metric-label">grams / raw_grams</div>
 </div>
 <div class="metric">
-<div class="metric-label">Calibration variance</div>
+<div class="metric-label">Calibration std</div>
 <div class="metric-value" id="scale-std">--</div>
 <div class="metric-label">grams</div>
 </div>
