--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@ h1{font-size:2.5rem;margin-bottom:0.5rem;text-align:center;text-shadow:2px 2px 4
 .status-dot{width:1rem;height:1rem;border-radius:50%;animation:pulse 2s infinite}
 .status-text{font-size:1.5rem;font-weight:600}
 @keyframes pulse{0%,100%{opacity:1}50%{opacity:0.5}}
+.initializing .status-dot{background:#71c7f8}
 .idle .status-dot{background:#4ade80}
 .stabilizing .status-dot{background:#fbbf24}
 .grinding .status-dot{background:#f97316}
